[package]
name = "yolk_dots"
authors = ["ElKowar <dev@elkowar.dev>"]
description = "Templated dotfile management without template files"
version = "0.0.13"
edition = "2021"
repository = "https://github.com/elkowar/yolk"
homepage = "https://elkowar.github.io/yolk"
license = "MIT OR Apache-2.0"
documentation = "https://elkowar.github.io/yolk/book"
categories = ["config", "command-line-utilities", "template-engine"]

[[bin]]
name = "yolk"
path = "src/main.rs"

[dependencies]
cached = "0.54.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
dirs = "5.0.1"
dunce = "1.0.5"
edit = "0.1.5"
expanduser = "1.2.2"
extend = "1.2.0"
fs-err = "3.0.0"
glob = "0.3.1"
indoc = "2.0.5"
inotify = "0.11.0"
maplit = "1.0.2"
miette = { version = "7.4.0", features = ["fancy"] }
normalize-path = "0.2.1"
notify = "7.0.0"
notify-debouncer-full = "0.4.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
regex = "1.11.1"
rhai = { version = "1.20.0", features = ["std", "sync", "internals"] }

tracing = { version = "0.1.40" }
rhai-autodocs = { version = "0.7.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "7.0.0"
whoami = "1.5.2"
winnow = { version = "0.6.20", features = ["unstable-recover"] }
cov-mark = "2.0.0"
# rhai-autodocs = { version = "0.7.0", path = "../../clones/rhai-autodocs" }

[dev-dependencies]
tracing-tree = "0.4.0"
assert_fs = "1.1.2"
assert_matches = "1.5.0"
insta = { version = "1.41.1", features = ["yaml"] }
predicates = "3.1.2"
test-log = { version = "0.2.16", default-features = false, features = [
    "color",
    "trace",
] }

[profile.dev.package]
insta = { opt-level = 3 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# [workspace.metadata.dist.dependencies.apt]
# "musl-tools" = "*"
