[package]
name = "yolk_dots"
authors = ["ElKowar <dev@elkowar.dev>"]
description = "Templated dotfile management without template files"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/elkowar/yolk"
homepage = "https://elkowar.github.io/yolk"
license = "MIT OR Apache-2.0"
documentation = "https://elkowar.github.io/yolk/book"
categories = ["config", "command-line-utilities", "template-engine"]

[[bin]]
name = "yolk"
path = "src/main.rs"

[lib]
name = "yolk"
path = "src/lib.rs"

[dependencies]
cached = { version = "0.54.0", default-features = false }
clap = { version = "4.5.28", features = ["derive", "env"] }
dirs = "6.0.0"
dunce = "1.0.5"
edit = "0.1.5"
extend = "1.2.0"
fs-err = "3.1.0"
glob = "0.3.2"
indoc = "2.0.5"
maplit = "1.0.2"
miette = { version = "7.5.0", features = ["fancy"] }
normalize-path = "0.2.1"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
regex = "1.11.1"
rhai = { version = "1.21.0", features = [
    "std",
    "internals",
    "no_custom_syntax",
    "sync",
], default-features = false }
tracing = "0.1.41"
rhai-autodocs = { version = "0.8.0", optional = true }
thiserror = "2.0.11"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "7.0.2"
whoami = "1.5.2"
winnow = { version = "0.6.20", features = ["unstable-recover"] }
cov-mark = "2.0.0"
arbitrary = { version = "1.4.1", features = ["derive"] }
symlink = "0.1.0"
hex = "0.4.3"
walkdir = "2.5.0"
tracing-tree = "0.4.0"
# rhai-autodocs = { version = "0.7.0", path = "../../clones/rhai-autodocs" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = { version = "0.24.0", default-features = false }
# tracing-tree = "0.4.0"
assert_fs = "1.1.2"
insta = { version = "1.42.1", default-features = false, features = [
    "colors",
    "redactions",
    "filters",
] }
predicates = "3.1.3"
test-log = { version = "0.2.17", default-features = false, features = [
    "color",
    "trace",
] }
assert_cmd = "2.0.16"

[profile.dev.package]
insta = { opt-level = 3 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
docgen = ["rhai-autodocs", "rhai/metadata"]

# [workspace.metadata.dist.dependencies.apt]
# "musl-tools" = "*"
