[package]
name = "yolk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.8"
yolk = { path = "..", package = "yolk_dots" }
arbitrary = { version = "1.3.2", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "render"
path = "fuzz_targets/render.rs"
test = false
doc = false

[[bin]]
name = "comment_style"
path = "fuzz_targets/comment_style.rs"
test = false
doc = false
